feat(core): add live HTTP server and wire UI to real AGV backend:
  - Add dk.sdu.st4.core.server package with three classes:
      Orchestrator  — runs the full AGV production cycle in a background
                      thread (load→execute→poll-until-idle for each step)
                      using java.net.http directly; maintains a rolling
                      event log; handles start/pause/stop/abort
      ApiServer     — embedded JDK HttpServer (port 8080) serving the
                      React UI as static files and exposing three endpoints:
                      GET  /api/status   → live AGV telemetry + line status
                      GET  /api/events   → last 20 orchestrator log entries
                      POST /api/control  → start / pause / stop / abort
      Main          — entry point; run with: mvn exec:java -pl core

  - Update core/module-info.java: add requires jdk.httpserver, java.net.http;
    export dk.sdu.st4.core.server

  - Update core/pom.xml: add exec-maven-plugin (mainClass: core.server.Main)

  - Update Dashboard.jsx:
      - Poll /api/status every 2s; overlay real AGV battery, state, and
        program name onto machine cards when backend is online
      - Poll /api/events every 2s; replace event log with real orchestrator
        output
      - Wire Start/Pause/Stop/Abort buttons to POST /api/control (optimistic
        local update + authoritative backend sync)
      - Add "Backend · LIVE / offline" indicator in StatsBar
      - Falls back to mock data gracefully when server is not running.

  - Fix styles.css: remove 3 duplicate selectors (.nl-foot, .btn-danger,
    .btn-ghost-danger); add missing CSS custom property defaults to :root
    (--ff-base, --ff-head, --ff-mono, --head-tracking, --c, --cs, --accent)

Co-authored-by: Ltechsystem <joachimlow02@gmail.com>