@@ -7,11 +7,9 @@ This file provides guidance to Claude Code (claude.ai/code) when working with co
 **ST4 — Production Line Integration** (SDU 4th Semester Project)
 
 Java 17 JPMS Maven multi-module project integrating three Industry 4.0 assets:
-- **Warehouse** — communicated via SOAP (port 8081)
-- **AGV** (Automated Guided Vehicle) — communicated via REST (port 8082)
-- **Assembly Station** — communicated via MQTT (port 1883)
-
-Most business logic is stubbed with `TODO` comments and `UnsupportedOperationException`. The primary task is implementing `ProductionOrchestrator` and `Main` in the `app` module (which does not yet exist and must be created).
+- **Warehouse** — SOAP via Apache CXF JAX-WS (port 8081)
+- **AGV** (Automated Guided Vehicle) — REST via `java.net.http` (port 8082)
+- **Assembly Station** — MQTT via Eclipse Paho (port 1883)
 
 ## Commands
 
@@ -19,35 +17,43 @@ Most business logic is stubbed with `TODO` comments and `UnsupportedOperationExc
 ```bash
 mvn clean install
 ```
+> **Warning:** The `warehouse` module fetches the WSDL from `http://localhost:8081/Service.asmx?wsdl` during the `generate-sources` phase. Docker must be running before building warehouse or running `mvn clean install`.
 
-### Run the application
+### Start Docker services
 ```bash
-# Start Docker services first
 docker compose up -d
-
-# common has no module-info.java so --add-reads bridges it to named modules at runtime
-java --module-path target/modules \
-     --add-reads dk.sdu.st4.agv=ALL-UNNAMED \
-     --add-reads dk.sdu.st4.warehouse=ALL-UNNAMED \
-     --add-reads dk.sdu.st4.assemblystation=ALL-UNNAMED \
-     --add-reads dk.sdu.st4.app=ALL-UNNAMED \
-     --module dk.sdu.st4.app/dk.sdu.st4.app.Main
 ```
 
-### Run a single module's tests
+### Run tests for a single module
 ```bash
-mvn test -pl agv
+mvn test -pl agv          # uses WireMock — no Docker needed
 mvn test -pl warehouse
 mvn test -pl assemblystation
+```
+
+> `AgvIntegrationTest` hits the real AGV container and requires Docker. `AgvServiceImplTest` uses WireMock and runs standalone.
+
+### Run the application (HTTP server + UI)
+```bash
+docker compose up -d          # AGV emulator on :8082, Warehouse on :8081
+mvn install -pl core,agv,common  # build first (skip warehouse to avoid needing Docker WSDL)
+mvn exec:java -pl core        # starts server on http://localhost:8080
+```
+Then open **http://localhost:8080** in a browser. The UI is served directly by the Java server.
+
+Optional overrides:
+```bash
+mvn exec:java -pl core -Dserver.port=9090
+mvn exec:java -pl core -Dui.path=/absolute/path/to/ui
 ```
 
 ## Architecture
 
 ### Module dependency graph
 ```
-app
+app  (does not exist yet — must be created)
  ├── agv           ──┐
- ├── warehouse     ──┤──> common (plain library, no module-info) ──> core
+ ├── warehouse     ──┤──> common (no module-info) ──> core
  └── assemblystation┘
 ```
 
@@ -55,73 +61,78 @@ app
 
 | Module | Package | Role |
 |---|---|---|
-| `core` | `dk.sdu.st4.core` | Pure domain layer — models (`AgvStatus`, `AssemblyStatus`, `HealthCheckResult`, `WarehouseInventory`) and enums only. No implementations live here. |
-| `common` | `dk.sdu.st4.common` | Plain library (no `module-info.java`). Contains `AppConfig` (all endpoint/topic constants), `JsonUtil` (Jackson wrapper, **currently fully stubbed**), and service interfaces (`IAgv` in `common.Interfaces`). Named modules access it via `--add-reads …=ALL-UNNAMED` at both compile time (Maven compiler plugin) and runtime. |
-| `agv` | `dk.sdu.st4.agv` | REST client (`AgvClient` via `java.net.http`) + `AgvServiceImpl`. Two-step pattern: `loadProgram()` then `executeProgram()`, poll `getStatus()` until `Idle`. |
-| `warehouse` | `dk.sdu.st4.warehouse` | SOAP client (`WarehouseClient` — manually builds envelopes, uses `java.xml`) + `WarehouseServiceImpl`. |
-| `assemblystation` | `dk.sdu.st4.assemblystation` | MQTT client (`AssemblyStationClient` using Eclipse Paho) + `AssemblyStationServiceImpl`. Publish to `emulator/operation`, subscribe to `emulator/status` and `emulator/checkhealth`. |
-| `app` | `dk.sdu.st4.app` | **Does not exist yet.** Entry point (`Main`) and `ProductionOrchestrator` — the only place where all services are wired together. Must be added as a Maven module **and** registered in the parent `pom.xml` `<modules>` list. |
-
-**Key constraint:** Service implementations (`AgvServiceImpl`, etc.) must stay in their own module (`agv`, `warehouse`, `assemblystation`) — never in `core` or `common`. They depend on their module's client class (e.g. `AgvClient`), and moving them to `core` would invert the dependency graph (`core → agv`) creating a cycle.
-
-### Implementation order (stub dependencies)
-
-Everything blocks on `JsonUtil` — it is fully stubbed with `UnsupportedOperationException`. Implement in this order:
-1. `JsonUtil.toJson()` / `JsonUtil.fromJson()` — unblocks all JSON serialisation
-2. `@JsonProperty` annotations on `AgvStatus` fields (see table below)
-3. `@JsonCreator` / `fromState()` hook on `AgvState` for integer deserialisation
-4. Service interfaces in `core/service/` (`IAgvService`, `IAssemblyStationService`, `IWarehouseService`)
-5. Service implementations (`AgvServiceImpl`, etc.)
-6. `app` module with `Main` + `ProductionOrchestrator`
-
-### Production cycle (to implement in `ProductionOrchestrator`)
-1. Warehouse picks tray → part moved to outlet
-2. AGV: `MOVE_TO_STORAGE` → `PICK_WAREHOUSE` → `MOVE_TO_ASSEMBLY` → `PUT_ASSEMBLY` (each step: load, execute, poll until Idle)
-3. Assembly station: publish `startOperation(processId)`, await `emulator/checkhealth` callback
-4. AGV: `PICK_ASSEMBLY` → `MOVE_TO_STORAGE` → `PUT_WAREHOUSE`
-5. Warehouse inserts assembled item
-
-### Key constants (`AppConfig`)
-- `AGV_BASE_URL` = `http://localhost:8082/v1/status/`
-- `WAREHOUSE_SERVICE_URL` = `http://localhost:8081/Service.asmx` (SOAP namespace: `http://tempuri.org/`)
-- `MQTT_BROKER_URL` = `tcp://localhost:1883`
-- `MQTT_TOPIC_OPERATION` = `emulator/operation`
-- `MQTT_TOPIC_STATUS` = `emulator/status`
-- `MQTT_TOPIC_HEALTH` = `emulator/checkhealth`
-- `MQTT_UNHEALTHY_PROCESS_ID` = `9999` (triggers error path for testing)
-- `AGV_LOAD_STATE` = `1`, `AGV_EXECUTE_STATE` = `2`
-
-### Error handling
-All interface methods (`IAgv`, and any future `IWarehouse`/`IAssemblyStation` equivalents) declare `throws Exception`. No custom exception classes — use `Exception` directly and let it propagate.
-
-### AGV state machine
-- `AgvState` constants use **PascalCase**: `Idle` (1), `Executing` (2), `Charging` (3) — look up via `AgvState.fromState(int)`
-- `AssemblyState.IDLE` = code `0`, `EXECUTING` = `1`, `ERROR` = `2`
-- Poll `getStatus()` until `AgvState.Idle` before issuing the next AGV command
-
-### Jackson / JSON field mapping
-The AGV REST API uses PascalCase and a spaced key. `AgvStatus` fields **must be annotated** with `@JsonProperty` (not yet done):
-
-| Java field | JSON key |
-|---|---|
-| `battery` | `"Battery"` |
-| `programName` | `"Program name"` |
-| `state` | `"State"` |
-| `timestamp` | `"TimeStamp"` |
-
-`AgvState` is serialised as an integer — Jackson needs a `@JsonCreator` on `AgvState.fromState(int)` to map the raw integer to the enum. The same pattern applies to `AssemblyState`.
-
-JSON request bodies for AGV PUT calls must be built as plain strings or via `JsonUtil.toJson()` (once implemented) — not object literals. Example: `"{\"Program name\": \"" + program.getApiName() + "\", \"State\": " + AppConfig.AGV_LOAD_STATE + "}"`.
+| `core` | `dk.sdu.st4.core` | Domain layer — models, enums. Also contains the JavaFX UI sources in `core/ui/`. No service interfaces here. |
+| `common` | `dk.sdu.st4.common` | No `module-info.java`. Contains `AppConfig` (endpoint/topic constants), `JsonUtil` (Jackson wrapper — **fully implemented**), and service interfaces in `common.Interfaces` (`IAgv`, `IWarehouse`, `IConnect`). |
+| `agv` | `dk.sdu.st4.agv` | `AgvClient` (HTTP GET/PUT via `java.net.http`) + `AgvServiceImpl` implements `IAgv`. |
+| `warehouse` | `dk.sdu.st4.warehouse` | `WarehouseClient` (in default package) implements `IWarehouse` using Apache CXF JAX-WS stubs generated from the live WSDL at build time. |
+| `assemblystation` | `dk.sdu.st4.assemblystation` | Only `module-info.java` exists — client and service implementation not yet written. |
+| `app` | `dk.sdu.st4.app` | **Does not exist.** Must be created as a Maven module, added to the parent `pom.xml` `<modules>` list, and contain `Main` + `ProductionOrchestrator`. |
 
 ### JPMS / `common` library constraint
-`common` intentionally has no `module-info.java`. Named modules (`agv`, `assemblystation`, and eventually `app`) access it via the unnamed module. Each such module must have in its `pom.xml`:
+`common` has no `module-info.java`. Named modules access it via the unnamed module. Each named module that uses `common` must have in its `pom.xml`:
 ```xml
 <compilerArgs>
     <arg>--add-reads</arg>
     <arg>dk.sdu.st4.<module>=ALL-UNNAMED</arg>
 </compilerArgs>
 ```
-Do **not** add `requires dk.sdu.st4.common` to any `module-info.java`. `core` is accessed normally (`requires dk.sdu.st4.core`) since it does have a `module-info.java` and exports its packages.
+Do **not** add `requires dk.sdu.st4.common` to any `module-info.java`. Tests run off the classpath (`<useModulePath>false</useModulePath>`) to avoid JPMS friction with test dependencies.
+
+### Service interfaces
+All service interfaces live in `common/Interfaces/`, **not** `core/service/`:
+- `IAgv` — `loadProgram(AgvProgram)`, `executeProgram()`, `getStatus()`
+- `IWarehouse` — `PickItem(int)`, `InsertItem(int, String)`, `GetInventory()`, `GetState()`
+- `IConnect` — machine connection lifecycle (add/remove/connect/disconnect)
+
+### Key constants (`AppConfig`)
+- `AGV_BASE_URL` = `http://localhost:8082/v1/status/`
+- `WAREHOUSE_SERVICE_URL` = `http://localhost:8081/Service.asmx`
+- `WAREHOUSE_SOAP_NAMESPACE` = `http://tempuri.org/`
+- `MQTT_BROKER_URL` = `tcp://localhost:1883`
+- `MQTT_TOPIC_OPERATION` = `emulator/operation`
+- `MQTT_TOPIC_STATUS` = `emulator/status`
+- `MQTT_TOPIC_HEALTH` = `emulator/checkhealth`
+- `MQTT_UNHEALTHY_PROCESS_ID` = `9999`
+- `AGV_LOAD_STATE` = `1`, `AGV_EXECUTE_STATE` = `2`
+
+### Jackson / JSON field mapping
+`AgvStatus` is already annotated. The AGV REST API uses **lowercase** keys (not PascalCase):
+
+| Java field | `@JsonProperty` value |
+|---|---|
+| `battery` | `"battery"` |
+| `programName` | `"program name"` |
+| `state` | `"state"` |
+| `timestamp` | `"timestamp"` |
+
+`AgvState.fromState(int)` already has `@JsonCreator` for integer deserialisation.
+
+`AgvProgram.getProgram()` returns the full description string used as the `"Program name"` value in PUT request bodies.
+
+### AGV operation pattern
+Two-step: `loadProgram()` then `executeProgram()`, poll `getStatus()` until `AgvState.Idle` before the next command.
+
+`AgvState` constants are PascalCase: `Idle` (1), `Executing` (2), `Charging` (3).  
+`AssemblyState` constants are UPPER_CASE: `IDLE` (0), `EXECUTING` (1), `ERROR` (2).
+
+### Warehouse SOAP client
+`WarehouseClient` (in the default package in `warehouse/src/main/java/`) is generated/backed by Apache CXF. The CXF codegen plugin runs `wsdl2java` against the live endpoint during `generate-sources`, placing stubs in `dk.sdu.st4.warehouse.service`. This means **Docker must be running** when building the `warehouse` module from scratch.
+
+### Production cycle (to implement in `ProductionOrchestrator`)
+1. Warehouse picks tray → part moved to outlet
+2. AGV: `MoveToStorageOperation` → `PickWarehouseOperation` → `MoveToAssemblyOperation` → `PutAssemblyOperation`
+3. Assembly station: publish `startOperation(processId)`, await `emulator/checkhealth` callback
+4. AGV: `PickAssemblyOperation` → `MoveToStorageOperation` → `PutWarehouseOperation`
+5. Warehouse inserts assembled item
+
+### Error handling
+Interface methods declare `throws Exception`. No custom exception classes — use `Exception` directly and propagate.
 
 ### Docker services
-All external dependencies run via Docker Compose: MQTT broker, AGV emulator, Warehouse emulator, Assembly Station emulator, and PostgreSQL (port 5432, credentials: `skateboardas`/`skateboardas`). The assembly station emulator connects to the MQTT broker internally; it does not expose its own port.
+| Service | Port |
+|---|---|
+| MQTT broker | 1883 (TCP), 9001 (WS) |
+| AGV emulator | 8082 |
+| Warehouse emulator | 8081 |
+| Assembly station emulator | — (internal MQTT only) |
+| PostgreSQL | 5432 (`skateboardas`/`skateboardas`) |
